@@ -96,19 +96,28 @@ class CustomSidebars {
 		 *  Description:  Create and edit custom sidebars in your widget screen!
 		 * -------------------------------------------------------------------------
 		 */
-		lib3()->ui->add( 'core' );
-		lib3()->html->pointer(
-			'wpmudcs1',                               // Internal Pointer-ID
-			'#menu-appearance',                       // Point at
-			$plugin_title,
-			sprintf(
-				__(
-					'Now you can create and edit custom sidebars in your ' .
-					'<a href="%1$s">Widgets screen</a>!', 'custom-sidebars'
-				),
-				admin_url( 'widgets.php' )
-			)                                         // Body
-		);
+
+		$user_id = get_current_user_id();
+		$dismissed_wp_pointers = get_user_meta( $user_id, 'dismissed_wp_pointers', true );
+		$dismissed_wp_pointers = explode( ',', $dismissed_wp_pointers );
+
+		if ( in_array( 'wpmudcs1', $dismissed_wp_pointers ) || wp_is_mobile() ) {
+			lib3()->ui->add( 'core', 'widgets.php' );
+		} else {
+			lib3()->ui->add( 'core' );
+			lib3()->html->pointer(
+				'wpmudcs1',							   // Internal Pointer-ID
+				'#menu-appearance',					   // Point at
+				$plugin_title,
+				sprintf(
+					__(
+						'Now you can create and edit custom sidebars in your ' .
+						'<a href="%1$s">Widgets screen</a>!', 'custom-sidebars'
+					),
+					admin_url( 'widgets.php' )
+				)										 // Body
+			);
+		}
 
 		// Find out if the page is loaded in accessibility mode.
 		$flag = isset( $_GET['widgets-access'] ) ? $_GET['widgets-access'] : get_user_setting( 'widgets_access' );
