@@ -10,6 +10,8 @@ Change Log:
 - Fixed a problem with taxonomies.
 - Fixed a css glitch on media library.
 - Prevented to load assets on front-end.
+- Upgraded "WPMU Dev code library" to version 3.0.4.
+- Fixed a JavaScript conflicting with CiviCRM plugin.
 
 3.0.4 ( 2017-04-11 )
 - Improved "Create a custom sidebar to get started." box.
